Quick fix to cloud animation scrollbar

--- a/styles/servicemap.less
+++ b/styles/servicemap.less
@@ -15,6 +15,10 @@ html, body, #map {
   margin: 0px;
 }
 
+body {
+  overflow: hidden;
+}
+
 #app-container {
   width: 100%;
   height: 100%;
